[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.11"
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"
signature = "2.2.0"
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8.5"
